--- a/my-react-app/src/components/ButtonTreatment.css
+++ b/my-react-app/src/components/ButtonTreatment.css
@@ -17,3 +17,18 @@
     background-color: #005f56;
 }
 
+@media (max-width: 768px) {
+    .cta-button {
+        padding: 10px 20px; /* Mindre padding på surfplattor */
+        font-size: 0.9em;
+    }
+}
+
+@media (max-width: 480px) {
+    .cta-button {
+        padding: 8px 16px; /* Ännu mindre på mobiler */
+        font-size: 0.8em;
+    }
+}
+
+
