--- a/my-react-app/src/components/ContactSection.css
+++ b/my-react-app/src/components/ContactSection.css
@@ -45,15 +45,15 @@
     left: 70%;
 }
 
-
-
+.contact p a {
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.2s;
+  margin-right: 8px;;
+}
 .contact p a:hover {
   color: #0077cc; 
-  padding: 8px;
-
 }
-
-
 
 /* --- Mobilanpassning --- */
 @media (max-width: 768px) {
