--- a/my-react-app/src/components/ButtonTreatment.css
+++ b/my-react-app/src/components/ButtonTreatment.css
@@ -20,14 +20,15 @@
 @media (max-width: 768px) {
     .cta-button {
         padding: 10px 20px; /* Mindre padding på surfplattor */
-        font-size: 0.9em;
+        font-size: 0.5em; /* Mindre fontstorlek */
+       
     }
 }
 
 @media (max-width: 480px) {
     .cta-button {
         padding: 8px 16px; /* Ännu mindre på mobiler */
-        font-size: 0.8em;
+        font-size: 0.4em;
     }
 }
 
